config/base/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-checker
  namespace: platform-system
  labels:
    control-plane: canary-checker
spec:
  selector:
    matchLabels:
      control-plane: canary-checker
  replicas: 1

  template:
    metadata:
      labels:
        control-plane: canary-checker
    spec:
      serviceAccountName: canary-checker-sa
      volumes:
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
      containers:
        - name: canary-checker
          # we need elevated privileges to run ICMP checks
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            runAsUser: 0
            capabilities:
              add:
                - CAP_NET_RAW
          image: flanksource/canary-checker:v0.11.2
          volumeMounts:
            - name: dockersock
              mountPath: "/var/run/docker.sock"
          command:
            - /app/canary-checker
          args:
            - operator
            - -v
            - --httpPort
            - "8080"
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /index.html
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
      terminationGracePeriodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: canary-checker
  namespace: platform-system
  labels:
    control-plane: canary-checker
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    control-plane: canary-checker
