config/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-checker
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - canary-checker
      secretName: canary-tls
  rules:
    - host: canary-checker
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: canary-checker
                port:
                  number: 8080
